--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
                             <p class="signup"><strong>Already have an account ? </strong><a href="#signin" onclick="toggleForm();"><b>Sign In</b></a></p>
                         </form>
                     </div>
-                    <div class="imgBx"><img src="lap1.jpg"></div>
+                    <div class="imgBx"><img src="img/lap1.jpg"></div>
                 </div>
             </div>
         </section>
@@ -41,7 +41,7 @@
         <section id="signin">
             <div class="container">
                 <div class="user singinBx">
-                    <div class="imgBx"><img src="lap1.jpg"></div>
+                    <div class="imgBx"><img src="img/lap1.jpg"></div>
                     <div class="formBx">
                         <form>
                            
