--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
       
     </head>
     <body>
-        <a href="website.html">Back to home</a>
+        <a href="index.html">Back to home</a>
         <!--Sign form-->
         <section id="signup">
             <div class="container">
